fix(export): fix incorrect ctx execution issue with RF2 export